# hexa_control

./: CMakeLists.txt  README.md  package.xml
config/: hexa_control.yaml  hexa_control_mocap.yaml  hexa_control_odomless.yaml  hexa_control_ukf.yaml  hexa_control_ukf_mocap.yaml
examples/: #dyn_pos_nature_p2_removed.dat#
include/hexa_control/: controllerDuty.hpp  controllerPhase.hpp  robotHexa.hpp
launch/: hexapod_server.launch  robot+vo.launch
src/: controllerDuty.cpp  controllerDuty.hpp  controllerPhase.cpp  controllerPhase.hpp  hexapod_client.cpp  hexapod_server.cpp  limit_torque_ax18.cpp  robotHexa.cpp  robotHexa.hpp  save_traj.cpp
srv/: Transfert.srv
